<resources>
    <string name="language">en</string>

    <string name="app_name">Japanese(JLPT)</string>
    <!--<string name="title_button_alphabet">Alphabet</string>-->
    <!--<string name="title_button_number">Number</string>-->
    <!--<string name="title_button_phrase">Phrases</string>-->
    <!--<string name="title_button_word">Animal</string>-->
    <!--<string name="title_button_house">House</string>-->
    <!--<string name="title_button_kanji">Kanji</string>-->
    <!--<string name="title_button_grammar">Grammar</string>-->
    <string name="title_button_date">Date</string>

    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="msg_recognition_voice">For recognition it\'s necessary to install Google Voice Search</string>
    <string name="msg_title_recognition">Install Voice Search from Google Play?</string>
    <!--<string name="msg_premium_app">Please install the Professional version from Google Play</string>-->
    <string name="msg_update_app">Please update new version from Google Play</string>
    <string name="msg_title_vn">Learn Vietnamese Pronunciation App</string>
    <string name="msg_content_vn">Do you want to install this application?</string>
    <string name="msg_title_update">Update</string>
    <string name="install">Install</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="speech_prompt">Say something…</string>


    <string name="configm_replay">Are you want to quit application?</string>
    <string name="title_hiragana">Hiragana</string>
    <string name="title_katakana">Katakana</string>

    <string name="title_date_day">DAY</string>
    <string name="title_date_month">MONTH</string>

    <string name="title_jlpt">JLPT</string>
    <string name="title_N1">N1</string>
    <string name="title_N2">N2</string>
    <string name="title_N3">N3</string>
    <string name="title_N4">N4</string>
    <string name="title_N5">N5</string>

    <string name="number_count_number">NUMBERS</string>>
    <string name="number_count_month">COUNTING MONTHS</string>>
    <string name="number_count_person">COUNTER FOR PEOPLE</string>>
    <string name="number_count_long">LONG THIN OBJECTS</string>
    <string name="number_count_flat">FLAT OBJECTS</string>
    <string name="number_count_book">COUNTER FOR BOOKS</string>
    <string name="number_count_small_animal">SMALL ANIMALS</string>
    <string name="number_count_age">COUNTER FOR YEARS OLD</string>
    <string name="number_count_small_object">SMALL OBJECTS</string>
    <string name="number_count_time">COUNTER FOR OCCURRENCES</string>
    <string name="number_count_location">COUNTER FOR PLACES</string>
    <string name="number_count_generic">COUNT ANY GENERIC OBJECT</string>

    <string name="menu_search">search</string>
    <string name="menu_search_hint">ひらがな, Romaji</string>
    <string name="coming_soon">Coming Soon!</string>

    <string name="title_dashboard">Learn Japanese</string>
    <string name="title_kanji">漢字</string>
    <string name="title_alphabet">Alphabet</string>
    <string name="title_grammar">Grammar</string>
    <string name="title_test">Test</string>
    <string name="title_word">Words</string>
    <string name="title_phrase">Phrase</string>
    <string name="title_food">Food</string>

    <string name="title_reading">Reading</string>
    <string name="title_kanji_2">Kanji</string>
    <string name="title_vocabulary">Vocabulary</string>
    <string name="title_listening">Listening</string>


    <string name="title_animal">ANIMAL</string>
    <string name="title_fruit">FRUITS</string>
    <string name="title_other">OTHER</string>
    <string name="title_counter">Counters</string>
    <string name="title_date">Dates</string>
    <string name="title_translate">TRANSLATE</string>
    <string name="title_ono">Onomatopoeia</string>
    <string name="title_menu_sort">Sort</string>
    <string name="title_menu_bookmark">Bookmark</string>

    <string name="title_lvn">Learn Vietnamese Pronunciation</string>
    <string name="title_n_grammar">Grammar %1$d/%2$d</string>
    <string name="title_n_reading">Reading %1$d/%2$d</string>
    <string name="title_n_vocabulary">Vocabulary %1$d/%2$d</string>
    <string name="title_n_listening">Listening %1$d/%2$d</string>
    <string name="title_n_kanji">Kanji %1$d/%2$d</string>

    <string name="title_n_grammar2">
        &lt;font color="blue"&gt;GRAMMAR&lt;/font&gt; &lt;br/&gt; &lt;font color="grey"&gt; (%1$d/%2$d)&lt;/font&gt;
    </string>
    <string name="title_n_reading2">
        &lt;font color="blue"&gt;READING &lt;/font&gt; &lt;br/&gt; &lt;font color="grey"&gt;(%1$d/%2$d)&lt;/font&gt;
    </string>
    <string name="title_n_vocabulary2">
        &lt;font color="blue"&gt;VOCABULARY &lt;/font&gt; &lt;br/&gt; &lt;font color="grey"&gt;(%1$d/%2$d)&lt;/font&gt;
    </string>
    <string name="title_n_listening2">
        &lt;font color="blue"&gt;LISTENING &lt;/font&gt; &lt;br/&gt; &lt;font color="grey"&gt;(%1$d/%2$d)&lt;/font&gt;
    </string>
    <string name="title_n_kanji2">
        &lt;font color="blue"&gt;KANJI &lt;/font&gt; &lt;br/&gt; &lt;font color="grey"&gt;(%1$d/%2$d)&lt;/font&gt;
    </string>

    <string name="title_view">View</string>


    <string name="korea">한국어</string>
    <string name="france">français</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="spanish">Español</string>
    <string name="vietnam">Vietnam</string>
    <string name="title_hint">hint</string>


    <string name="title_privacy_policy">Privacy Policy</string>
</resources>
