<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/btnListening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_n_listening"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/btnGrammar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_n_grammar"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/btnReading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_n_reading"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/btnVocabulary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_n_vocabulary"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/btnKanji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title_n_kanji"
                android:textSize="17sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>