<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="?attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/title_vocabulary"
                    android:textColor="@color/blue"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/btnVocabulary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_n_vocabulary"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/btnKanji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_n_kanji"
                    android:textColor="@color/white"
                    android:textSize="17sp" />


                <Button
                    android:id="@+id/btnVocabularyJ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_jlpt"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="?attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/title_grammar"
                    android:textColor="@color/blue"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/btnGrammar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_n_grammar"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/btnGrammarJ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_jlpt"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="?attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/title_reading"
                    android:textColor="@color/blue"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/btnReading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_n_reading"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/btnReadingJ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_jlpt"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/title_n_listening"
                    android:textColor="@color/blue"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/btnListening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_n_training"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/btnListeningJ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/title_jlpt"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

    </LinearLayout>
</ScrollView>